# obs-plugin

./: CMakeLists.txt  README.md  azure-pipelines.yml
cmake/: PluginHelper.cmake
data/locale/: en-US.ini
src/: audio-capture.cpp  audio-capture.hpp  audio-hook-info.hpp  plugin-macros.h.in  plugin-macros.hpp.in  plugin-main.cpp  preinit.cpp  preinit.hpp
src/audio-hook/: CMakeLists.txt  audio-hook-info.hpp  audio-hook-ver.hpp.in  audio-hook.cpp  audio-hook.hpp  audio-hook.rc.in  hook-main.cpp
src/audio-hook/funchook/: funchook.hpp
src/get-audio-offsets/: CMakeLists.txt  audioses-offsets.cpp  get-audio-offsets.cpp  get-audio-offsets.hpp
src/helpers/: audio-session-helper.cpp  audio-session-helper.hpp  hook-helper.hpp  process-pipe.cpp  process-pipe.hpp  windows-helper.cpp  windows-helper.hpp
